--- a/src/app/components/fornecedores/fornecedores-update/fornecedores-update.component.html
+++ b/src/app/components/fornecedores/fornecedores-update/fornecedores-update.component.html
@@ -3,16 +3,16 @@
         <mat-card-title>Alterar Fornecedor</mat-card-title>
         <form>
             <mat-form-field>
-                <input matInput placeholder="Nome" [(ngModel)]="fornecedor.nome_for" name="nome_for">
+                <input matInput placeholder="Nome" [(ngModel)]="fornecedor.nome_for" name="nome_for" required>
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="CNPJ" [(ngModel)]="fornecedor.cnpj_for" name="cnpj_for">
+                <input matInput placeholder="CNPJ" [(ngModel)]="fornecedor.cnpj_for" name="cnpj_for" disabled>
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Telefone" [(ngModel)]="fornecedor.telefone_for" name="telefone_for">
+                <input matInput placeholder="Telefone" [value]="telefoneFormatado" [(ngModel)]="fornecedor.telefone_for" (input)="onTelefoneInput($event)" name="telefone_for" required maxlength="15">
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Email" [(ngModel)]="fornecedor.email_for" name="email_for">
+                <input matInput placeholder="Email" [(ngModel)]="fornecedor.email_for" name="email_for" required>
             </mat-form-field>
         </form>
 
