--- a/src/app/views/cliente-crud/cliente-crud.component.css
+++ b/src/app/views/cliente-crud/cliente-crud.component.css
@@ -1,4 +1,8 @@
 button{
     margin-bottom: 30px;
     margin-top: 65px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
